Fixes a bug where clicking on subtitle button cases assosiated moive item get collapsed

--- a/resources/azam.css
+++ b/resources/azam.css
@@ -121,7 +121,7 @@ a {
     cursor: pointer;
 }
 
-a, a:hover, a:visited {
+a, a:hover, a:visited, a:focus {
     color: #999;
     text-decoration: none;
 }
